# clanchat

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac
scripts/: run-tests.sh
src/: Makefile.am  clanchat.c  clanchat.h  clanchatapi.c  clanchatapi.h  main.c
tests/: Makefile.am  check_clanchat.c  check_clanchatapi.c
